# smc_gui

./: .gitignore  BUGS.md  README.md  pyproject.toml
smc_gui/: About.ui  __main__.py  smc_gui.ui
